--- a/Fabada.html
+++ b/Fabada.html
@@ -4,7 +4,7 @@
 	<title>NVL-CSS-P2a</title>
 	<style rel="stylesheet" type="text/css" href="mystyle.css">
 		li{
-			background-color: : #fabada
+			background-color:#fabada
 			color:#000000
 		}
 	</style>
