--- a/Fabada.html
+++ b/Fabada.html
@@ -2,17 +2,17 @@
 <head>
 	<meta charset="utf-8">
 	<title>NVL-CSS-P2a</title>
-	<style rel="stylesheet" type="text/css" href="mystyle.css">
+	<style type="text/css">
 		li{
-			background-color:#fabada
+			background-color:#fabada;
 			color:#000000
 		}
 	</style>
 </head>
 <body>
 	<ul>
-		<li><span>Australia</span></li>
-		<li><span>Nueva Zelanda</span></li>
-		<li><span>Indonesia</span></li>
+		<li>Australia</li>
+		<li>Nueva Zelanda</li>
+		<li>Indonesia</li>
 	</ul>
 </body>
