--- a/Fabada.html
+++ b/Fabada.html
@@ -2,12 +2,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>NVL-CSS-P2a</title>
-	<style type="text/css">
-		li{
-			background-color:#fabada;
-			color:#000000
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	</link>
 </head>
 <body>
 	<ul>
